Added advertisements in advertisements section and about us section include diamond sponser

--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-  <!-- =======================================================
-  * Template Name: ARK Distributor - v1.0.0
-  * Template URL: https://bootstrapmade.com/ARK Distributor-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -135,31 +133,17 @@
             <div class="icon-boxes d-flex flex-column justify-content-center">
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                  <i class="bx bx-receipt"></i>
-                  <h4>24/7 Support & Service</h4>
-                  <p>ARK Distributor provides you 24/7 call support as well as online support from where you can get any
-                    technical solution regarding ARK Distributor. Online support through Tawk Integration.</p>
-                </div>
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                  <i class="bx bx-cube-alt"></i>
-                  <h4>Ek Ghanti</h4>
-                  <p>ARK Distributor brings you a seamless TV experience using “EK GHANTI” service to extend your
-                    expired package from your registered number. You just need to give a miss call on 9823872337 and get
-                    your package update for 2 days.</p>
-                </div>
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                  <i class="bx bx-images"></i>
-                  <h4>Field Support</h4>
-                  <p>ARK Distributor facilitate you with Field Support Managing all on site installation, repair,
-                    maintenance and test tasks. Diagnosing errors or technical problems and determining proper solutions
-                    to our Customer.</p>
-                </div>
-              </div>
-            </div><!-- End .content-->
-          </div>
-        </div>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/Z2gD-ITJJPs" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
 
-      </div>
+
+                </div>
+              </div><!-- End .content-->
+            </div>
+          </div>
+
+        </div>
     </section><!-- End About Section -->
 
     <!-- ======= Counts Section ======= -->
@@ -321,6 +305,53 @@
 
       </div>
     </section><!-- End Features Section -->
+
+    <!-- ======= Advertisements Section ======= -->
+
+    <div class="section-title">
+      <h2>Advertisements</h2>
+    </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+
+        <div class="item active">
+          <img src="assets/img/ads/jagadamba cement.png" alt="" style="width:100%;">
+
+        </div>
+
+        <div class="item">
+          <img src="assets/img/ads/cocacola.png" alt="" style="width:100%;">
+
+        </div>
+
+        <div class="item">
+          <img src="assets/img/ads/asian paints.png" alt="" style="width:100%;">
+
+        </div>
+
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+    <!-- End Advertisements Section -->
 
     <!-- ======= Channel Lists ======= -->
     <section id="portfolio" class="portfolio">
