Resolved Main Advertisements

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
       <div class="carousel-inner">
 
         <div class="item active">
-          <img src="assets/img/ads/jagadamba cement.png" alt="" style="width:100%;">
+          <img src="assets/img/ads/jagadamba cement.PNG" alt="" style="width:100%;">
 
         </div>
 
